<resources>
    <string name="hello_pictures_fragment">Hello pictures fragment</string>
    <string name="action_share_pictures">Share pictures</string>
    <string name="share_pictures_sheet_title">Share pictures</string>
    <string name="mime_type_image">image/*</string>
    <string name="extra_pic_uri">pic uri</string>
    <string name="picture_detail_toolbar_title"> </string>
    <string name="pic_date_format">dd MMMM yyyy HH:mm</string>
    <string name="pic_size_template">%1$sMB</string>
    <string name="pic_resolution_template">%1$s*%2$s</string>
    <string name="picture_image_loading_error">Failed to load picture!</string>
    <string name="picture_detail_loading_error">Picture detail unavailable!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size_label">Size:</string>
    <string name="date_label">Date:</string>
    <string name="pic_size_sample">3.67MB</string>
    <string name="pic_date_sample">13 March 2020 19:17</string>
    <string name="path_label">Path:</string>
    <string name="pic_path_sample">/Internal storage/DCIM/Screenshots</string>
    <string name="title_label">Title:</string>
    <string name="pic_title_sample">screenshots_13032020.jpg</string>
    <string name="resolution_label">Resolution:</string>
    <string name="pic_resolution_sample">1200*800</string>
    <string name="pic_detail_unavailable">Info unavailable</string>
    <string name="action_share_title">Share</string>
    <string name="action_trash_title">Trash</string>
    <string name="action_check_all_title">All</string>
    <string name="share_sheet_title">Share videos</string>
    <string name="video_uri_mime_type">video/*</string>
    <string name="extra_vid_uri">vid uri</string>
    <string name="activity_video_detail_label"> </string>
    <string name="vid_size_template">%1$sMB</string>
    <string name="vid_resolution_template">%1$s*%2$s</string>
    <string name="vid_date_format">dd MMMM yyyy HH:mm</string>
    <string name="vid_duration_format">%02d:%02d</string>
    <string name="trashing_success_message">Videos moved to trash</string>
    <string name="trashing_failure_message">Failed to trash videos!</string>
    <string name="play_video">play video</string>
    <string name="video_mime_type">video/*</string>
    <string name="no_player_error">Unable to start video</string>
    <string name="vid_size_sample">112.34MB</string>
    <string name="vid_added_sample">Jul 12 2019 13:45</string>
    <string name="vid_path_sample">/Internal storage/DCIM/Videos</string>
    <string name="vid_title_sample">my_vid2334.mp4</string>
    <string name="vid_resolution_sample">1980*1200</string>
    <string name="duration_label">Duration:</string>
    <string name="vid_duration_sample">2:13</string>
    <string name="trash_dialog_message">Move videos to recycle bin?</string>
    <string name="trash_dialog_title">Trash videos</string>
    <string name="dialog_pos_label">ok</string>
    <string name="dialog_neg_label">cancel</string>
    <string name="title_undo_trash">undo</string>
    <string name="trashing_undo_failure_message">Fail to restore videos!</string>
    <string name="title_filter_all">All</string>
    <string name="title_filter_video">Video</string>
    <string name="title_filter_image">Image</string>
    <string name="title_filter">Filter</string>
    <string name="action_restore">Restore</string>
    <string name="action_restore_all">Restore all</string>
    <string name="restore_all_dialog_message">Restore all trashed items?</string>
    <string name="restore_all_dialog_title">Restore all</string>
</resources>
