<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn=".controller.PictureViewerActivity">

    <data>
        <variable
            name="detail"
            type="com.diskin.alon.visuals.catalog.presentation.model.PictureDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.diskin.alon.visuals.catalog.presentation.controller.PictureDetailFragment">

        <TextView
            android:id="@+id/sizeLabel"
            style="@style/PicDetailLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sizeDetail"
            style="@style/PicDetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/sizeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sizeLabel"
            app:pictureSize="@{detail}"
            tools:text="@string/pic_size_sample" />

        <TextView
            android:id="@+id/dateLabel"
            style="@style/PicDetailLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_detail_space"
            android:text="@string/date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeDetail" />

        <TextView
            android:id="@+id/dateDetail"
            style="@style/PicDetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/dateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateLabel"
            app:pictureDate="@{detail}"
            tools:text="@string/pic_date_sample" />

        <TextView
            android:id="@+id/pathLabel"
            style="@style/PicDetailLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_detail_space"
            android:text="@string/path_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateDetail" />

        <TextView
            android:id="@+id/pathDetail"
            style="@style/PicDetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{detail.path}"
            app:layout_constraintBaseline_toBaselineOf="@+id/pathLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pathLabel"
            tools:text="@string/pic_path_sample" />

        <TextView
            android:id="@+id/titleLabel"
            style="@style/PicDetailLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_detail_space"
            android:text="@string/title_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pathDetail" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/PicDetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{detail.title}"
            app:layout_constraintBaseline_toBaselineOf="@+id/titleLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleLabel"
            tools:text="@string/pic_title_sample" />

        <TextView
            android:id="@+id/resolutionLabel"
            style="@style/PicDetailLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_detail_space"
            android:text="@string/resolution_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDetail" />

        <TextView
            android:id="@+id/resolutionDetail"
            style="@style/PicDetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/resolutionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resolutionLabel"
            app:pictureResolution="@{detail}"
            tools:text="@string/pic_resolution_sample" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>
